nach diversen renames

--- a/ENDE_Semester_PLF_GRG_2023-06/pom.xml
+++ b/ENDE_Semester_PLF_GRG_2023-06/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>at.spengergasse.slm</groupId>
-    <artifactId>s4-plf-001_online_shop</artifactId>
+    <artifactId>s4-plf-001_online_mdb</artifactId>
     <version>1.0.0</version>
 
 
